--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='ja'>
 <head>
   <meta charset='utf-8'>
-  <title>たいとる</title>
+  <title>web実験</title>
   <meta property="og:title" content="たいとる">
   <meta property="og:description" content="せつめいせつめい">
   <meta name="theme-color" content="#ECECF7">
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>私のホームページ</h1>
-    <div>〇〇〇〇のページです。</div>
+    <div>大阪公立大学工業高等専門学校総合工学システム学科1年</div>
   </div>
   <div class=main>
     <div>
