--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
     <div>
       <h2>クラブ</h2>
       <div>
-        〇〇部、〇〇同好会
+        プログラミング研究会所属
       </div>
     </div>
 
     <div>
       <h2>趣味</h2>
       <div>
-        毎朝の〇〇をすること
+        ゲームをすること
       </div>
     </div>
   </div>
   <div class=footer>
-    20YY年MM月DD日
+    2025年01月15日
   </div>
 </body>
 </html>
