--- a/rep02.html
+++ b/rep02.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>２週目のレポート ： 公大高専１年実習I-1</h1>
-    <div>○○班○○番 ニックネーム</div>
+    <div>jk01班22番 じま</div>
   </div>
   <div class=2week>
     <h2>第2週目</h2>
@@ -30,9 +30,9 @@
       <h3>2-1 2週目のレポートをHTMLで作る</h3>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        <br>
         2.感想<br>
-        かんそうかんそう<br>
+        <br>
         3. 2週目が完成した人は1週目のレポートも完成させる<br>
       </div>
     </div>
@@ -42,9 +42,9 @@
       <img src="ml.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+      　teachablemachineを用いて手の形を判別し手に形によって動作が変わるプログラムを作成した。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        やり方さえわかれば簡単だった<br>        
       </div>
     </div>
     
@@ -63,16 +63,16 @@
       <h3>各ページへのリンク</h3>
       <div>
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
-        <a href="https://yourID.github.io/web/rep01.html">1週目のレポート</a><br>
-        <a href="https://yourID.github.io/web/rep02.html">2週目のレポート</a><br>
-        <a href="https://yourID.github.io/web/rep03.html">3週目のレポート</a><br>
-        <a href="https://yourID.github.io/web/">私のホームページ</a><br>
+        <a href="https://yourID.jima2008.io/web/rep01.html">1週目のレポート</a><br>
+        <a href="https://yourID.jima2008.io/web/rep02.html">2週目のレポート</a><br>
+        <a href="https://yourID.jima2008.io/web/rep03.html">3週目のレポート</a><br>
+        <a href="https://yourID.jima2008.io/web/">私のホームページ</a><br>
       </div>      
     </div>
 
   </div>
   <div class=footer>
-    作成日：20YY年MM月DD日
+    作成日：20YY年01月22日
   </div>
 </body>
 </html>
