--- a/rep02.html
+++ b/rep02.html
@@ -53,9 +53,9 @@
       <img src="wroom.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        vrゴーグルを用いてロブロックスの体験を行った<br>
         2.感想<br>
-        かんそうかんそう<br>
+        シンプルに楽しかった<br>
       </div>
     </div>
     
