--- a/rep03.html
+++ b/rep03.html
@@ -21,7 +21,7 @@
 <body>
   <div class=header>
     <h1>３週目のレポート ： 公大高専１年実習I-1</h1>
-    <div>◯◯班〇〇番 ニックネーム</div>
+    <div>jk01班22番 じま</div>
   </div>
   <div class=3week>
     <h2>第3週目</h2>
@@ -31,9 +31,9 @@
       <a href="https://yourId.github.io/web/vr.html">自作した３次元空間</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        webサイト上でvr空間を作成した。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        わからないことも多かったが何とかすることができた。<br>
       </div>
     </div>
     <div>
@@ -42,9 +42,9 @@
       <a href="https://yourId.github.io/web/dengon.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        伝言プログラムを作成した。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        知らないことばかりで非常に興味深かった<br>
       </div>
     </div>
 
@@ -63,15 +63,15 @@
       <h3>各ページへのリンク</h3>
       <div>
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
-        <a href="https://yourID.github.io/web/rep01.html">1週目のレポート</a><br>
-        <a href="https://yourID.github.io/web/rep02.html">2週目のレポート</a><br>
-        <a href="https://yourID.github.io/web/rep03.html">3週目のレポート</a><br>
-        <a href="https://yourID.github.io/web/">私のホームページ</a><br>
+        <a href="https://jima2008.github.io/web/rep01.html">1週目のレポート</a><br>
+        <a href="https://jima2008.github.io/web/rep02.html">2週目のレポート</a><br>
+        <a href="https://jima2008.github.io/web/rep03.html">3週目のレポート</a><br>
+        <a href="https://jima2008.github.io/web/">私のホームページ</a><br>
       </div>      
     </div>
     
   <div class=footer>
-    作成日：20YY年MM月DD日
+    作成日：2025年01月29日
   </div>
 </body>
 </html>
