--- a/rep03.html
+++ b/rep03.html
@@ -7,7 +7,7 @@
   <meta property="og:description" content="最終レポート：公大高専１年実習I-1">
   <meta name="theme-color" content="#ECECF7">
   <meta name="msapplication-TileColor" content="#ECECF7">
-  <link rel="icon" type="image/png" xhref="icon.png">
+  <link rel="icon" type="vr/png" xhref="icon.png">
   <link rel="apple-touch-icon" xhref="icon.png">
   <meta name="msapplication-square310x310logo" xcontent="icon.png">
   <meta name="twitter:card" content="summary_large_image">
@@ -38,7 +38,7 @@
     </div>
     <div>
       <h3>3-2 JavaScript体験：伝言プログラムを作る</h3>
-      <img src="dengon.png" alt="JavaScript" width="50%" height="50%"><br>
+      <img src="puroguram.png" alt="JavaScript" width="50%" height="50%"><br>
       <a href="https://yourId.github.io/web/dengon.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
